--- a/animations.css
+++ b/animations.css
@@ -10,11 +10,6 @@
     border-radius: 15px;
 }
 
-.cavs03 {
-    background-color: black;
-    box-shadow:10px 0px 0px 0px white,-10px 0px 0px 0px white;
-}
-
 .white {
     background-color: white;
 }
@@ -33,11 +28,12 @@
 
 
 
-#chapt1b:hover #c14, #chapt1b:hover #c15, #chapt1b:hover #c16, #chapt1b:hover img, 
+ 
 #draftday:hover #pickquote, #draftday:hover #c11, #draftday:hover #c12, #draftday:hover #c13,
 #draftday:hover img, #chapt2:hover #c21, #chapt2:hover #c22, #chapt2:hover #villain, 
 #chapt2b:hover #c23, #chapt2b:hover #c24, #chapt2b:hover #c25, #chapt3:hover #c31, 
-#chapt3:hover #c32, #chapt3:hover #c33, #chapt3:hover img{
+#chapt3:hover #c32, #chapt3:hover #c33, #chapt3:hover img
+{
     display: block;
 }
 
@@ -48,7 +44,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top:80%;
+    top:90%;
     text-align: center;
     animation: fadeIn1, bounce;
     animation-duration: 12s, 2s;
