--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,21 @@ h1 {
 }
 
 #a4 {
-    color: white;
+    background-color: #ffb81c;
+}
+
+#a4 div {
+    height: 330px;
+    width: 92%;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
+    -5px -5px 10px rgba(255,255,255,0.3);
+    border: 1px solid rgba(255,255,255, 0.8);
+}
+
+#a4 p {
+    color: black;
 }
 
 
