--- a/styles.css
+++ b/styles.css
@@ -348,7 +348,7 @@ h1 {
 
 /* -------------------------------chapt2.5 css --------------------------------*/    
 
-#chapt2b {
+/* #chapt2b {
     height: 100vh;
 }
 
@@ -372,7 +372,7 @@ h1 {
     background-image: url(images/chapt2/finals10.jpg);
     background-position: left center;
     background-size: cover;
-}
+} */
 
 /* -------------------------------chapt3 css --------------------------------*/
 #chapt3 {
