starting on chapt3revamp

--- a/styles.css
+++ b/styles.css
@@ -365,7 +365,9 @@ h1 {
 
 
 /* -------------------------------chapt3 css --------------------------------*/
-
+#chapt3 {
+    height: 100vh;
+}
 
 
 
