--- a/styles.css
+++ b/styles.css
@@ -413,6 +413,24 @@ h1 {
     height: 100vh;
 }
 
+#p33 {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-size: 2.5em;
+}
+
+#p34 {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-size: 1.2em;
+}
+
+
+
 
 
 
