--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -2,6 +2,32 @@
     border: 5px #ffb81c solid;
 }
 
+.spcardgold {
+    height: 500px;
+    width: 80%;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
+    -5px -5px 10px rgba(255,255,255,0.5);
+    border: 1px solid rgba(255,255,255, 0.2);
+    background-color: #ffb81c;
+    padding:20px;
+}
+
+.spcardwine {
+    height: 500px;
+    width: 80%;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
+    -5px -5px 10px rgba(255,255,255,0.5);
+    border: 1px solid rgba(255,255,255, 0.2);
+    background-color: #6f263d;
+    padding:20px;
+}
+
+.hundred {
+    height: 100vh;
+}
+
 .box1 {
     height: 320px !important;
     width:30%;
