--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,78 @@ h1 {
     display: block;
 }
 
+
+
+/* -------------------------------matchup --------------------------------*/
+#matchup h1, p{
+    color: black !important;
+}
+
+#matchup i {
+    color:white;
+}
+
+#vs h1 {
+    font-size: 2em;
+}
+
+#vs {
+    box-shadow: 
+    -5px 0px 10px rgba(0,0,0,0.5);
+    border: 1px solid rgba(255,255,255, 1);
+    background-color: white;
+    padding:20px;
+}
+
+#vsbron {
+    background-image: url(images/matchup/vsbron.png);
+    background-size: cover;
+}
+
+#vscurry {
+    box-shadow: inset 5px 0px 10px rgba(0,0,0,0.5);
+    background-image: url(images/matchup/vscurry.png);
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* -------------------------------chapt1 css --------------------------------*/
 #chapt1 > div{
     height: 100vh;
