failure resume layout added

--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@ h1 {
 }
 
 
-/* -------------------------------matchup --------------------------------*/
+/* -------------------------------failure resume --------------------------------*/
 
 
 
