--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -6,7 +6,7 @@
     background-color: #efeeee;
     padding: 0px;
     height: 500px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
     -5px -5px 10px rgba(255,255,255,0.5);
     border: 1px solid rgba(255,255,255, 0.2);
@@ -17,11 +17,17 @@
     height: 200px;
     width: 90%;
     margin-top: 10%;
+    text-align: center;
 }
+
 
 .nmbtm {
     height: 250px;
     width: 90%;
+}
+
+.onepg {
+    width: 80%;
 }
 
 .wineleft {
