--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,6 @@ h1 {
 }
 
 .opening img {
-    animation: fadeIn2;
-    animation-duration: 8s;
-    animation-fill-mode: forwards;
     object-fit: cover;
     height: 100vh;
     width: 100vw;
@@ -59,10 +56,8 @@ h1 {
     position: absolute;
     transform: translateX(-50%) translateY(-50%);
     color:#FDBB30;
-    animation: fadeIn;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
     font-family: 'Bebas Neue' ;
+    font-size: 5em;
 }
 
 .opening .para2{
@@ -71,23 +66,18 @@ h1 {
     position: absolute;
     transform: translateX(-50%) translateY(-50%);
     color: #FDBB30;
-    animation: fadeIn2;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
     font-family: 'Bebas Neue' ;
     font-size: 80px;
+    font-size: 7em;
 }
 
 .opening p {
     color: white;
-    animation: fadeIn2;
-    animation-duration: 8s;
-    animation-fill-mode: forwards;
     top: 60%;
     left: 50%;
     position: absolute;
     transform: translateX(-50%) translateY(-50%);
-    font-size: 22px;
+    font-size: 25px;
     font-family: 'PT Sans' ;
 }
 
