--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,18 @@ html {
 }
 
 body {
-    background-color: black;
     padding:0;
     margin:0;
 }
 
 p {
     font-family: 'PT Sans' ;
-    color: white;
+    color: black;
 }
 
 h1 {
     font-family: 'Bebas Neue' ;
-    color:white;
+    color:black;
 }
 
 
@@ -197,24 +196,21 @@ h1 {
 
 /* -------------------------------failure resume --------------------------------*/
 
-#failres {
-    background-image: url(images/chuddle-dark.jpg);
-    background-size: cover;
-}
 
-#failres img {
-    position: absolute;
-    height: 100vh;
-    top: 5%;
+
+#herotxt1 {
+    position: relative;
+    bottom: 50%;
+    font-size: 7em;
     left: 50%;
-    transform: translateX(-50%);
 }
 
-#failures p {
-    color: white;
+#herotxt2 {
+    position: relative;
+    bottom: 55%;
+    left:70%;
+    font-size: 7em;
 }
-
-
 
 
 
