--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -73,6 +73,14 @@
     height: 100vh;
 }
 
+.third {
+    height: 30vh;
+}
+
+.fifty {
+    height: 50vh;
+}
+
 .box1 {
     height: 320px !important;
     width:30%;
@@ -109,9 +117,7 @@
     background-color: #efeeee;
 }
 
-.third {
-    height: 30vh;
-}
+
 
 #chapt1 h1,#chapt1 #bron1, #ib1, #ib2, #ib3, #a4 p,  #c21, #c22, #villain,
 #chapt2b p {
