added new pics, testing on expand panel animation

--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -204,7 +204,13 @@
     animation-iteration-count: infinite;
 }
 
+@keyframes expand {
+    100% {
+        transform: translateX(-50%);
+    
+    }
 
+}
 
 @keyframes fadeIn {
     0% {
