--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -6,11 +6,15 @@
     height: 600px;
     border-radius: 10px;
     width: 350px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
+    -5px -5px 10px rgba(255,255,255,0.5);
+    border: 1px solid rgba(255,255,255, 0.2);
 }
 
 .nmpanel img {
     width: 100%;
     border-radius: 10px 10px 0 0;
+
 }
 
 .nmpaneltxt {
