--- a/styles.css
+++ b/styles.css
@@ -163,17 +163,17 @@ h1 {
 }
 
 #herotxt1 {
-    position: relative;
-    bottom: 37%;
+    position: absolute;
+    bottom: 45%;
     font-size: 6em;
-    left: 40%;
+    left: 30%;
     color: #6f263d;
 }
 
 #herotxt2 {
     position: absolute;
     bottom: 30%;
-    left:55%;
+    left:30%;
     font-size: 7em;
     color: #6f263d;
 }
@@ -250,3 +250,4 @@ h1 {
 
 /* -------------------------------mynav css --------------------------------*/
 
+.navbar { background: #0069AA; margin: 0; border: 0; }
