--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -3,7 +3,7 @@
 }
 
 .nmpanel {
-    height: 300px;
+    height: 330px;
     border-radius: 10px;
     width: 280px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
@@ -19,6 +19,8 @@
 
 .nmpaneltxt {
     height: 300px;
+    text-align: justify;
+    padding:10px;
 }
 
 
