--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -45,6 +45,12 @@
     text-align: center;
 }
 
+.nmize {
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
+    -5px -5px 10px rgba(255,255,255,0.5);
+    border: 1px solid rgba(255,255,255, 0.2);
+}
 
 .nmbtm {
     height: 250px;
