--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,14 @@ h1 {
     padding-left: 5px;
 }
 
+#finals16 img {
+    object-fit: cover;
+    
+    height: 20%;
+}
+
+
+
 /* -------------------------------mynav css --------------------------------*/
 
 .navbar { background: #0069AA; margin: 0; border: 0; }
