--- a/styles.css
+++ b/styles.css
@@ -170,17 +170,30 @@ h1 {
 }
 
 #namelg1 {
-    font-size: 4em;
+    font-size: 7em;
     position: relative;
     top:50%;
     right: 30%;
 }
 
 #namelg2 {
-    font-size: 4em;
+    font-size: 7em;
     position: relative;
     top:45%;
     
+}
+
+#namesm1 {
+    font-size: 4.2em;
+    position: relative;
+    left:30%;
+}
+
+#namesm2 {
+    font-size: 4.2em;
+    position: relative;
+    right:40%;
+    top:30%
 }
 
 
@@ -210,7 +223,6 @@ h1 {
 
 #finals16 img {
     object-fit: cover;
-    
     height: 20%;
 }
 
