--- a/styles.css
+++ b/styles.css
@@ -294,7 +294,7 @@ h1 {
     width: 70px;
     transform: translateY(-150%) translateX(-70%) scaleY(3) scaleX(1.5);
     position: relative;
-    bottom: 309%;
+    bottom: 307.5%;
     left: 88%;
 }
 
@@ -306,7 +306,7 @@ h1 {
     width: 70px;
     transform: translateY(-150%) translateX(5%) scaleY(3) scaleX(1.5);
     position: relative;
-    top:17%;
+    top:16.5%;
     left:5%;
 }
 
@@ -314,7 +314,7 @@ h1 {
 #courtline {
     width: 325px;
     height: 150px;
-    border: 3px solid black;
+    border: 4px solid black;
     position: relative;
     bottom: 130%;
     left:2px;
@@ -343,6 +343,11 @@ h1 {
     transform: skewX(30deg);
 }
 
+#mycourt {
+    width:330px;
+    height: 155px;
+    border: 1px gold solid;
+}
 
 
 
