--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,9 @@ h1 {
     height: 20%;
 }
 
+
+
+
 /* -------------------------------court css --------------------------------*/
 .circle {
     border-radius: 50%;
@@ -233,7 +236,7 @@ h1 {
     width: 50px;
     height: 50px;
     position: relative;
-    bottom: 68%;
+    bottom: 66.5%;
     left:42.5%;
 
 }
@@ -244,7 +247,7 @@ h1 {
     width: 50px;
     height: 50px;
     position: relative;
-    bottom:3%;
+    bottom:1%;
     left:14%;
 }
 
@@ -255,7 +258,7 @@ h1 {
     height: 50px;
     position: relative;
     left:70%;
-    bottom:328%;
+    bottom:325%;
 
 
 }
@@ -265,7 +268,7 @@ h1 {
     height: 50px;
     width: 70px;
     position: relative;
-    top:30%;
+    top:32%;
     left:2px;
     
 }
@@ -276,7 +279,7 @@ h1 {
     width: 70px;
     position: relative;
     left:78%;
-    bottom:295%;
+    bottom:292%;
 }
 
 #threept {
@@ -348,6 +351,21 @@ h1 {
     height: 155px;
     border: 1px gold solid;
 }
+
+#mycourtportrait {
+    width:330px;
+    height: 155px;
+    border: 1px gold solid;
+    transform:rotate(90deg);
+}
+
+/* -------------------------------rematch css --------------------------------*/
+
+
+
+
+
+
 
 
 
