added gold color font to headings

--- a/styles.css
+++ b/styles.css
@@ -414,6 +414,9 @@ h1 {
 
 }
 
+#redemption {
+    height: 500px;
+}
 
 /* -------------------------------final 2mins css --------------------------------*/
 
