--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -54,6 +54,7 @@
 
 
 /* design */
+
 .gline {
     border-left: 3px solid #FDBB30;
 }
@@ -67,11 +68,14 @@
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
     -5px -5px 10px rgba(255,255,255,0.5);
-    border: 1px solid rgba(255,255,255, 0.2);
-    background-color: #efeeee;
+    border: 1px solid rgba(255,255,255, 0.4);
+    background-color: white;
 }
 
-
+.nmizeimg {
+    width: 100%;
+    border-radius: 5px;
+}
 
 
 .wineleft {
@@ -138,6 +142,135 @@
     animation-iteration-count: 1, infinite;
     font-size: 30px;
 }
+
+/* bball court css */
+.circle {
+    border-radius: 50%;
+    border: 1px solid black;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    bottom: 66.5%;
+    left:42.5%;
+
+}
+
+.circlewar {
+    border-radius: 50%;
+    border: 1px solid blue;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    bottom:4%;
+    left:14%;
+}
+
+.circlecavs {
+    border-radius: 50%;
+    border: 1px solid red;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    left:70%;
+    bottom:322%;
+
+
+}
+
+#box4 {
+    border: 1px solid blue;
+    height: 50.5px;
+    width: 70px;
+    position: relative;
+    top:28%;
+    left:2px;
+    
+}
+
+#box6 {
+    border: 1px solid red;
+    height: 50px;
+    width: 70px;
+    position: relative;
+    left:78%;
+    bottom:290%;
+}
+
+#threept {
+    border: 1px solid black;
+    border-radius: 0 50% 50% 0;
+    height: 50px;
+    position: relative;
+    
+}
+
+#cavs3 {
+    border: 1px solid black;
+    border-radius:  50% 0 0 50% ;
+    height: 44px;
+    width: 70px;
+    transform: translateY(-150%) translateX(-70%) scaleY(3) scaleX(1.5);
+    position: relative;
+    bottom: 309%;
+    left: 88%;
+}
+
+
+#war3 {
+    border: 1px solid black;
+    border-radius: 0 50% 50% 0;
+    height: 44px;
+    width: 70px;
+    transform: translateY(-150%) translateX(5%) scaleY(3) scaleX(1.5);
+    position: relative;
+    top:8%;
+    left:5%;
+}
+
+
+#courtline {
+    width: 325px;
+    height: 150px;
+    border: 4px solid black;
+    position: relative;
+    bottom: 130%;
+    left:2px;
+}
+
+#midline {
+    height: 147px;
+    width: 0px;
+    border: 1px black solid;
+    position: relative;
+    bottom: 226%;
+    left: 50%;
+}
+
+#warcourt {
+    width:330px;
+    height: 155px;
+    transform: skewX(-30deg);
+}
+
+#cavcourt {
+    width:330px;
+    height: 155px;
+    transform: skewX(30deg);
+}
+
+#mycourt {
+    width:330px;
+    height: 155px;
+}
+
+#mycourtportrait {
+    width:330px;
+    height: 155px;
+    transform:rotate(90deg);
+}
+
+
+/* experiments */
 
 
 /* my animations */
