--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,10 @@ html {
   
 }
 
-html,body
+body
 {
     width: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 p {
@@ -177,21 +175,22 @@ h1 {
 #namelg1 {
     font-size: 7em;
     position: relative;
-    top:50%;
-    right: 30%;
+    top:45%;
+    right: 60%;
 }
 
 #namelg2 {
     font-size: 7em;
     position: relative;
-    top:45%;
+    top:35%;
+    right:30%;
     
 }
 
 #namesm1 {
     font-size: 4.2em;
     position: relative;
-    left:30%;
+    left:50%;
 }
 
 #namesm2 {
@@ -203,6 +202,10 @@ h1 {
 
 
 /* -------------------------------matchup --------------------------------*/
+#testsvg {
+    width: 50%;
+    height:500px;
+}
 
 #test {
     position: absolute;
@@ -224,6 +227,9 @@ h1 {
 #matchup2 img {
     width: 100%;
     margin-bottom: 15px;
+    margin-left:auto;
+    margin-right:auto;
+    position: relative;
 }
 
 #matchup2 h1 {
@@ -238,136 +244,17 @@ h1 {
 
 
 
-
-/* -------------------------------court css --------------------------------*/
-.circle {
-    border-radius: 50%;
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
-    position: relative;
-    bottom: 66.5%;
-    left:42.5%;
-
-}
-
-.circlewar {
-    border-radius: 50%;
-    border: 1px solid blue;
-    width: 50px;
-    height: 50px;
-    position: relative;
-    bottom:4%;
-    left:14%;
-}
-
-.circlecavs {
-    border-radius: 50%;
-    border: 1px solid red;
-    width: 50px;
-    height: 50px;
-    position: relative;
-    left:70%;
-    bottom:322%;
-
-
-}
-
-#box4 {
-    border: 1px solid blue;
-    height: 50.5px;
-    width: 70px;
-    position: relative;
-    top:28%;
-    left:2px;
-    
-}
-
-#box6 {
-    border: 1px solid red;
-    height: 50px;
-    width: 70px;
-    position: relative;
-    left:78%;
-    bottom:290%;
-}
-
-#threept {
-    border: 1px solid black;
-    border-radius: 0 50% 50% 0;
-    height: 50px;
-    position: relative;
-    
-}
-
-#cavs3 {
-    border: 1px solid black;
-    border-radius:  50% 0 0 50% ;
-    height: 44px;
-    width: 70px;
-    transform: translateY(-150%) translateX(-70%) scaleY(3) scaleX(1.5);
-    position: relative;
-    bottom: 309%;
-    left: 88%;
-}
-
-
-#war3 {
-    border: 1px solid black;
-    border-radius: 0 50% 50% 0;
-    height: 44px;
-    width: 70px;
-    transform: translateY(-150%) translateX(5%) scaleY(3) scaleX(1.5);
-    position: relative;
-    top:8%;
-    left:5%;
-}
-
-
-#courtline {
-    width: 325px;
-    height: 150px;
-    border: 4px solid black;
-    position: relative;
-    bottom: 130%;
-    left:2px;
-}
-
-#midline {
-    height: 147px;
-    width: 0px;
-    border: 1px black solid;
-    position: relative;
-    bottom: 226%;
-    left: 50%;
-}
-
-#warcourt {
-    width:330px;
-    height: 155px;
-    transform: skewX(-30deg);
-}
-
-#cavcourt {
-    width:330px;
-    height: 155px;
-    transform: skewX(30deg);
-}
-
-#mycourt {
-    width:330px;
-    height: 155px;
-}
-
-#mycourtportrait {
-    width:330px;
-    height: 155px;
-    transform:rotate(90deg);
-}
-
 /* -------------------------------rematch css --------------------------------*/
+#rematch2 {
+    height: 100vh;
+    background-color: black;
+}
 
-.topshad {
+
+
+
+
+/* .topshad {
     box-shadow: inset 0px 7px 5px 0px rgba(0, 0, 0, 0.3);
 }
 
@@ -412,7 +299,7 @@ h1 {
 
 #redemption {
     height: 500px;
-}
+} */
 
 
 
